--- a/Faculdade/ARA0168 - Tópicos de Big Data em Python/Exploring/CSV_Pandas/Untitled-1.ipynb
+++ b/Faculdade/ARA0168 - Tópicos de Big Data em Python/Exploring/CSV_Pandas/Untitled-1.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os \n",
+    "import glob \n",
+    "import matplotlib\n",
+    "import numpy\n"
    ]
   },
   {
@@ -18,67 +22,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "registros = pd.read_excel (\"/Users/thiagom/Downloads/archive/Arma-de-Fogo_12_2021.xls\")"
+    "# Caminho para importacao dos arquivos fontes de dados\n",
+    "path = '/Users/thiagom/Documents/Coding/VSCodeRoot/Faculdade/ARA0168 - Tópicos de Big Data em Python/Exploring/data'\n",
+    "\n",
+    "# Lista de Arquivos xlsx\n",
+    "file_list = glob.glob(os.path.join(path, \"*.xlsx\"))\n",
+    "\n",
+    "#\n",
+    "file_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excl_list = []\n",
+    "for file in file_list:\n",
+    "    excl_list.append(pd.read_excel(file))\n",
+    "\n",
+    "#print (registros)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excl_merged = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         AIS Dia da Semana       Data             Hora  Quantidade\n",
-      "0     AIS 21         Sexta 2021-01-01         00:00:00           1\n",
-      "1      AIS 8         Sexta 2021-01-01  05:30:00.029000           1\n",
-      "2     AIS 17         Sexta 2021-01-01  06:49:59.981000           1\n",
-      "3     AIS 19         Sexta 2021-01-01  13:59:59.971000           2\n",
-      "4     AIS 19         Sexta 2021-01-01  15:29:59.971000           1\n",
-      "...      ...           ...        ...              ...         ...\n",
-      "5737  AIS 16         Sexta 2021-12-31  11:44:59.971000           1\n",
-      "5738  AIS 11         Sexta 2021-12-31  14:30:00.029000           1\n",
-      "5739  AIS 13         Sexta 2021-12-31  19:59:59.971000           1\n",
-      "5740  AIS 02         Sexta 2021-12-31  20:30:00.029000           1\n",
-      "5741  AIS 13         Sexta 2021-12-31         22:30:00           1\n",
-      "\n",
-      "[5742 rows x 5 columns]\n"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/1y/yb521c0x0db9qm94jf7xdcvh0000gp/T/ipykernel_25870/1243360298.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mexcl_file\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexcl_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# appends the data into the excl_merged\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m# dataframe.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     excl_merged = excl_merged.append(\n\u001b[0m\u001b[1;32m      6\u001b[0m       \u001b[0mexcl_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6295\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6296\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6297\u001b[0m         \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6298\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6299\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
      ]
     }
    ],
    "source": [
-    "print (registros)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.8.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(matplotlib.__version__)"
+    "for excl_file in excl_list:\n",
+    "     \n",
+    "    # appends the data into the excl_merged \n",
+    "    # dataframe.\n",
+    "    excl_merged = excl_merged.append(\n",
+    "      excl_file, ignore_index=True)"
    ]
   },
   {
